--- a/client/modules/home/home.html
+++ b/client/modules/home/home.html
@@ -1,9 +1,12 @@
 <h1>Home</h1>
-<button ng-click='test()'>New note</button>
+<button ng-click='createNewNote()'>New note</button>
 
 <div class='notes'>
   <div class='note' ng-repeat='note in notes'>
-    <button class='button-flip' ng-click='flip(note)'>F</button>
+    <div class='note-buttons'>
+      <button class='button-flip' ng-click='flip(note)'>F</button>
+      <button class='button-flip' ng-click='delete(note)'>D</button>
+    </div>
     <textarea class='note-front' ng-model='note.text_front' ng-hide='note.flipped' ng-change='changeFront(note)'></textarea>
     <textarea class='note-back' ng-model='note.text_back' ng-show='note.flipped' ng-change='changeBack(note)'></textarea>
   </div>
