--- a/client/modules/home/home.html
+++ b/client/modules/home/home.html
@@ -1,13 +1,22 @@
-<h1>Home</h1>
 <button ng-click='createNewNote()'>New note</button>
+<div class='status' ng-hide='updating'>Updated</div>
+<div class='status' ng-show='updating'>Saving..</div>
 
 <div class='notes'>
-  <div class='note' ng-repeat='note in notes'>
-    <div class='note-buttons'>
-      <button class='button-flip' ng-click='flip(note)'>F</button>
-      <button class='button-flip' ng-click='delete(note)'>D</button>
+  <div class='note' ng-repeat='note in notes' ng-class='{unsynced: note.unsynced}' ng-blur='updateNote(note)'>
+    {{note.unsynced}}
+
+    <p class='button-flip' ng-click='flip(note)'>&#9701;</p>
+    <button class='button-delete' ng-click='delete(note)'>D</button>
+
+    <textarea class='note-front' ng-model='note.text_front' ng-hide='note.flipped' ng-blur='updateNote(note)'></textarea>
+    <textarea class='note-back' ng-model='note.text_back' ng-show='note.flipped' ng-blur='updateNote(note)'></textarea>
+
+    <div class='tags'>
+      <span class='button-tag' ng-click='toggleNoteTag(note)'>+</span>
+      <input class='new-tag' placeholder='...'\ ng-model='note.newTag' ng-show='note.addingTag' ng-keydown='saveNoteTag(event, note)' ng-blur='toggleNoteTag(note)'>
+      <span class='tag' ng-repeat='tag in note.tags'>{{tag}}</span>
     </div>
-    <textarea class='note-front' ng-model='note.text_front' ng-hide='note.flipped' ng-change='changeFront(note)'></textarea>
-    <textarea class='note-back' ng-model='note.text_back' ng-show='note.flipped' ng-change='changeBack(note)'></textarea>
+
   </div>
 </div>
