Fixed focusing bugs

--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
   <h1>Flipnote</h1>
   <hr>
   <div class='component component-folders' ui-view='folders'></div>
+  <div class='component component-separator'></div>
   <div class='component component-notes' ui-view='notes'></div>
 
   <!-- dependencies -->
