--- a/client/modules/folders/folders.html
+++ b/client/modules/folders/folders.html
@@ -1,8 +1,7 @@
 <div class='new-folder'>
-  <button ng-click='toggleNewFolder()'>New folder</button>
-  <input class='new-folder-input' placeholder='...' ng-model='newFolder' ng-show='creatingFolder' ng-keydown='createNewFolder(event)' ng-blur='toggleNewFolder()' focus-me='newFolderFocus'\>
+  <button class='new-folder-button' ng-click='toggleNewFolder()'>New folder</button>
+  <input type='text' class='new-folder-input' placeholder='...' ng-model='newFolder' ng-show='creatingFolder' ng-keydown='createNewFolder(event)' ng-blur='toggleNewFolder()' focus-me='newFolderFocus'\>
 </div>
-<button ng-click='createNewNote()'>New note</button>
 <span class='notice-syncing' ng-show='updating'>Syncing...</span>
 <span class='notice-synced' ng-hide='updating'>Synced.</span>
 
