--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,9 @@
 <html ng-app='app'>
 <head>
   <title>Flipnote</title>
-
+  <!-- Google Fonts -->
+  <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+  
   <!-- css files -->
   <link rel='stylesheet' href="css/main.css">
   <link rel='stylesheet' href="modules/folders/folders.css">
