--- a/client/home.html
+++ b/client/home.html
@@ -6,7 +6,7 @@
   <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 
   <!-- css files -->
-  <link rel='stylesheet' href="css/main.css">
+  <link rel='stylesheet' href="modules/app/app.css">
   <link rel='stylesheet' href="modules/folders/folders.css">
   <link rel='stylesheet' href="modules/notes/notes.css">
 
@@ -16,7 +16,7 @@
 
 
   <div class='header'>
-    <h1>Flipnote {{test}}</h1>
+    <h1>Flipnote</h1>
     <!-- preventing Angular UI-router from taking over control -->
     <a href='logout' ng-click='$event.stopPropagation()'>Logout</a>
     <hr>
@@ -31,6 +31,7 @@
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/underscore/underscore.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
 
   <!-- Angular js files -->
   <script src="modules/app/app.js"></script>
