Scaffolded Gruntfile with usemin, with copy left

--- a/client/home.html
+++ b/client/home.html
@@ -6,9 +6,11 @@
   <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 
   <!-- css files -->
+  <!-- build:css ../dist/public/css/style.min.css -->
   <link rel='stylesheet' href="modules/app/app.css">
   <link rel='stylesheet' href="modules/folders/folders.css">
   <link rel='stylesheet' href="modules/notes/notes.css">
+  <!-- endbuild -->
 
 </head>
 <body>
@@ -34,9 +36,11 @@
   <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
 
   <!-- Angular js files -->
+  <!-- build:js ../dist/public/js/app.js -->
   <script src="modules/app/app.js"></script>
   <script src="modules/folders/folders.js"></script>
   <script src="modules/notes/notes.js"></script>
+  <!-- endbuild -->
 
 </body>
 </html>
