Modified folder fetching to uninclude notes in objects returned

--- a/client/home.html
+++ b/client/home.html
@@ -3,7 +3,7 @@
 <head>
   <title>Flipnote</title>
   <!-- Google Fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+  <!-- <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'> -->
 
   <!-- css files -->
   <!-- build:css ../dist/public/css/style.min.css -->
