Implemented basic client-side Grunt build process

--- a/client/home.html
+++ b/client/home.html
@@ -6,7 +6,7 @@
   <!-- <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'> -->
 
   <!-- css files -->
-  <!-- build:css ../dist/public/css/style.min.css -->
+  <!-- build:css public/css/style.min.css -->
   <link rel='stylesheet' href="modules/app/app.css">
   <link rel='stylesheet' href="modules/folders/folders.css">
   <link rel='stylesheet' href="modules/notes/notes.css">
@@ -14,9 +14,6 @@
 
 </head>
 <body>
-<!-- <body ng-app='app'> -->
-
-
   <div class='header'>
     <h1>Flipnote</h1>
     <!-- preventing Angular UI-router from taking over control -->
@@ -36,7 +33,7 @@
   <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
 
   <!-- Angular js files -->
-  <!-- build:js ../dist/public/js/app.js -->
+  <!-- build:js public/js/app.js -->
   <script src="modules/app/app.js"></script>
   <script src="modules/folders/folders.js"></script>
   <script src="modules/notes/notes.js"></script>
