--- a/client/login.html
+++ b/client/login.html
@@ -3,7 +3,9 @@
 <head>
   <title>Flipnote</title>
   <!-- css files -->
+  <!-- build:css public/css/style.min.css -->
   <link rel='stylesheet' href="css/login.css">
+  <!-- endbuild -->
 
 </head>
 <body>
@@ -52,9 +54,11 @@
   <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 
   <!-- Angular js files -->
+  <!-- build:js public/js/app.js -->
   <script src="modules/app/app.js"></script>
   <script src="modules/folders/folders.js"></script>
   <script src="modules/notes/notes.js"></script>
+  <!-- endbuild -->
 
 </body>
 </html>
