Configured first Heroku-ready build

--- a/client/login.html
+++ b/client/login.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Flipnote</title>
+  <title>Flipover</title>
   <!-- css files -->
-  <!-- build:css public/css/style.min.css -->
+  <!-- build:css css/style.min.css -->
   <link rel='stylesheet' href="css/login.css">
   <!-- endbuild -->
 
@@ -54,7 +54,7 @@
   <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 
   <!-- Angular js files -->
-  <!-- build:js public/js/app.js -->
+  <!-- build:js js/app.js -->
   <script src="modules/app/app.js"></script>
   <script src="modules/folders/folders.js"></script>
   <script src="modules/notes/notes.js"></script>
