--- a/client/home.html
+++ b/client/home.html
@@ -6,7 +6,7 @@
   <!-- <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'> -->
 
   <!-- css files -->
-  <!-- build:css public/css/style.min.css -->
+  <!-- build:css css/style.min.css -->
   <link rel='stylesheet' href="modules/app/app.css">
   <link rel='stylesheet' href="modules/folders/folders.css">
   <link rel='stylesheet' href="modules/notes/notes.css">
@@ -25,7 +25,6 @@
   <div class='component component-notes' ui-view='notes'></div>
 
   <!-- dependencies -->
-  <script src="/socket.io/socket.io.js"></script>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/underscore/underscore.js"></script>
@@ -33,7 +32,7 @@
   <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
 
   <!-- Angular js files -->
-  <!-- build:js public/js/app.js -->
+  <!-- build:js js/app.js -->
   <script src="modules/app/app.js"></script>
   <script src="modules/folders/folders.js"></script>
   <script src="modules/notes/notes.js"></script>
