Deployed successfully to Azure

--- a/client/home.html
+++ b/client/home.html
@@ -6,7 +6,7 @@
   <!-- <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'> -->
 
   <!-- css files -->
-  <!-- build:css css/style.min.css -->
+  <!-- build:css css/app.min.css -->
   <link rel='stylesheet' href="modules/app/app.css">
   <link rel='stylesheet' href="modules/folders/folders.css">
   <link rel='stylesheet' href="modules/notes/notes.css">
