--- a/client/login.html
+++ b/client/login.html
@@ -3,7 +3,7 @@
 <head>
   <title>Flipover</title>
   <!-- css files -->
-  <!-- build:css css/style.min.css -->
+  <!-- build:css css/login.min.css -->
   <link rel='stylesheet' href="css/login.css">
   <!-- endbuild -->
 
