Added favicon to build and fixed autocomplete on signup

--- a/client/login.html
+++ b/client/login.html
@@ -21,7 +21,7 @@
 
     <div class='account-signup'>
       <h4>Signup to try our powerful features!</h4>
-      <form action="/signup" method="post">
+      <form action="/signup" method="post" autocomplete='off'>
         <div class='account-input'>
           <input type="text" name="username" placeholder='username' \>
           <input type="password" name="password" placeholder='password' \>
