update auth logic

--- a/client/login.html
+++ b/client/login.html
@@ -23,8 +23,8 @@
       <h4>Signup to try our powerful features!</h4>
       <form action="/signup" method="post" autocomplete='off'>
         <div class='account-input'>
-          <input type="text" name="username" placeholder='username' \>
-          <input type="password" name="password" placeholder='password' \>
+          <input type="text" name="signup_username" placeholder='username' \>
+          <input type="password" name="signup_password" placeholder='password' \>
         </div>
         <div class='account-submit'>
           <input type="submit" value="Sign Up" \>
